# pandemonium

./: .env.example  .gitignore  CLAUDE.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.json
.claude/agents/: balance-analyzer.md  effect-debugger.md  game-reviewer.md  test-writer.md
.claude/hooks/: context_injector.py  curl_enforcer.py  effect_validator.py  serena_activate.sh  serena_reminder.sh  server_gate.py  server_manager.py  server_status_init.py  skill_injector.py  test_reminder.py
.serena/: project.yml
.serena/memories/: action_handlers.md  card_generator.md  codebase_structure.md  effects_engine.md  elemental_system.md  game_architecture.md  hooks_system.md  meta_progression.md  power_system_detailed.md  project_overview.md  relic_system.md  screens_and_phases.md  selection_effects.md  style_conventions.md  suggested_commands.md  target_resolution.md  task_completion.md  visual_system.md
public/cards/: .gitkeep
public/prompts/: card.yaml  dungeon.yaml  enemy.yaml  hero.yaml  modifier.yaml  relic.yaml
scripts/: dev.sh  kill-prior.sh  start-comfyui.sh  start-imagegen.sh
services/image-gen/: audit_prompts.py  batch.py  composable_themes.py  composable_visuals.py  generate_outfits.py  generate_rooms.py  generator.py  groq_pools.py  prompts.py  prompts.yaml  pyproject.toml  regenerate_all.py  server.py  setup.sh
services/image-gen/tests/: test_integration.py
src/: App.tsx  index.css  index.css.backup
src/config/: relic-icons.ts  themes.ts
src/content/: events.ts  rooms.ts
src/game/: cards.ts  (+18 more)
(+231 files in other folders)
